--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-02 Sun 22:05]
+#+CAPTION: Clock summary at [2016-10-02 Sun 22:21]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *40:57* |       |      | 100.0 |
+| *Total time*                                                                | *41:12* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 40:57   |       |      | 100.0 |
-| Active                                                                      |         | 40:57 |      | 100.0 |
+| Stories                                                                     | 41:12   |       |      | 100.0 |
+| Active                                                                      |         | 41:12 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 3:17 |   8.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.3 |
 | COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   6.1 |
@@ -35,18 +35,19 @@
 | COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   3.5 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.4 |
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   3.5 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.7 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.6 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.6 |
 | COMPLETED Investigate element annotation support                            |         |       | 2:05 |   5.1 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.5 |
 | COMPLETED Create the formattables model                                     |         |       | 1:32 |   3.7 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   9.7 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   9.6 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.8 |
 | COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   9.0 |
-| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   3.3 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  17.3 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   3.2 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  17.2 |
 | COMPLETED Add a banner to readme                                            |         |       | 1:29 |   3.6 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.9 |
+| COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.6 |
 | STARTED Remove formatter id                                                 |         |       | 0:04 |   0.2 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.8 |
 | STARTED Analysis around terminology in formatting space                     |         |       | 2:45 |   6.7 |
@@ -597,6 +598,14 @@ groups. For example =integrated_facet= is only applicable to class
 header formatters. We could implement this by making the formatter
 group a collection and having formatters belong to multiple groups.
 
+*** COMPLETED Add more types to =quilt::cpp= canned tests             :story:
+    CLOSED: [2016-10-02 Sun 22:21]
+    CLOCK: [2016-10-02 Sun 22:06]--[2016-10-02 Sun 22:21] =>  0:15
+
+Originally we used the =*_info= types in the canned tests, but these
+are all about to be removed. We need to hunt for types in the
+=quilt::cpp= model and add those to the canned tests.
+
 *** STARTED Remove formatter id                                       :story:
     CLOCK: [2016-09-28 Wed 22:49]--[2016-09-28 Wed 22:53] =>  0:04
 
@@ -807,12 +816,6 @@ Renames:
 - ownership_hierarchy: archetype_location, model_name becomes kernel,
   facet name becomes facet and formatter name archetype. Add
   sub-kernel.
-
-*** Add more types to =quilt::cpp= canned tests                       :story:
-
-Originally we used the =*_info= types in the canned tests, but these
-are all about to be removed. We need to hunt for types in the
-=quilt::cpp= model and add those to the canned tests.
 
 *** Refactor code around model origination                            :story:
 
